# fastdata-indexer

./: .dockerignore  .env.example  .gitignore  ARCHITECTURE.md  Cargo.toml  Dockerfile.fastfs-sub-indexer  Dockerfile.kv-sub-indexer  Dockerfile.main-indexer  README.md  accounts.csv  accounts_full.csv  raw.txt
fastfs-sub-indexer/: Cargo.toml
fastfs-sub-indexer/src/: fastfs.rs  main.rs  scylla_types.rs
kv-sub-indexer/: Cargo.toml
kv-sub-indexer/src/: main.rs  scylla_types.rs
main-indexer/: Cargo.toml
main-indexer/src/: main.rs
scylladb/: Cargo.toml
scylladb/src/: lib.rs  types.rs  utils.rs
suffix-fetcher/src/: lib.rs
