[package]
name = "kv-sub-indexer"
description = "Indexer for Key-Value FastData standard."
version.workspace = true
authors.workspace = true
edition.workspace = true
repository.workspace = true
license.workspace = true

[dependencies]
scylladb = { path = "../scylladb" }
suffix-fetcher = { path = "../suffix-fetcher" }

dotenvy.workspace = true
fastnear-primitives.workspace = true
tokio.workspace = true
tracing.workspace = true
tracing-subscriber.workspace = true
ctrlc.workspace = true
anyhow.workspace = true
serde.workspace = true
serde_json.workspace = true
scylla.workspace = true
